<resources>
    <string name="app_name">Vault</string>
    <string name="title_course_list_activity"> Course List </string>
    <string name="title_activity_start">start</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_menu">menu</string>
    <string name="menu_item_1">item 1</string>
    <string name="menu_item_2">item 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- hier staan alle courses als string -->

    <string name="Course1">IARCH</string>
    <string name="Course2">IIBPM</string>
    <string name="Course3">IHBO</string>
    <string name="Course4">IOPR1</string>
    <string name="Course5">INET</string>
    <string name="Course6">IWDR</string>
    <string name="Course7">IRDB</string>
    <string name="Course8">IIBUI</string>
    <string name="Course9">IPRODAM</string>
    <string name="Course10">IPROMEDT</string>
    <string name="Course11">IMUML</string>
    <string name="Course12">IOPR2</string>
    <string name="Course13">IFIT</string>
    <string name="Course14">IPOFIT</string>
    <string name="Course15">IPOSE</string>
    <string name="Course16">IIPXXXX</string>
    <string name="Course17">IPROV</string>
    <string name="Course18">ICOMMP</string>
    <string name="Course19">ISLP</string>

    <!-- hier staan de adviezen -->
    <string name="advies1">Je hebt te weinig punten.</string>
    <string name="advies2">Je hebt genoeg punten, let op je kernvakken.</string>
    <string name="advies3">Je mag naar het 2de jaar, let op je kernvakken.</string>
    <string name="advies4">Goed werk! je hebt je propedeuse!</string>
    <string name="advies5">Je hebt nog te weinig studiepunten bereikt om op de opleiding te mogen blijven. Doe beter je best.</string>
    <string name="advies6">Je hebt voldoende studiepunten om je opleiding te mogen vervolgen op de hogeschool. Je wordt nog niet bevorderd tot het tweede jaar.</string>
    <string name="advies7">Je hebt nu voldoende studiepunten om bevorderd te worden naar het tweede jaar.</string>
    <string name="advies8">Gefeliciteerd! Je hebt je propedeuse binnen. Veel succes bij de rest van je opleiding!</string>

</resources>
